[tool.poetry]
name = "data-science-template"
version = "0.1.0"
description = "Basic data science template using poetry"
authors = ["cbuton"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.10.1"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "^7.1.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
